--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -77,26 +77,41 @@ li {
 .image {
   height: 240px;
   width: 240px;
-  position: absolute;
-  margin-left: 40px;
+  margin-left: 27px; 
+  margin-bottom: 10px; 
+
 }
 
-p2 {
-  float: right; 
-  width: 660px;
-  margin-right: 20px;
+.column-left {
+
+  padding: 10px;
+  float: left; 
+}
+
+.column-right {
+  float: left;
+  width: px;
+  margin-left: 35px; 
+}
+
+/* Clear floats after the columns */
+.row-1:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.row-2 {
+  margin-left: 37px; 
+  margin-bottom: 20px; 
+}
+
+
+p2,
+p3 {
   line-height: 2.0; 
   font-family: Arial, Helvetica, sans-serif;
   color: #777777; 
-}
-
-p3 {
-  float: left;
-  margin-left: 40px; 
-  margin-right: 20px;
-  line-height: 2.0; 
-  font-family: Arial, Helvetica, sans-serif;
-  color: #777777;
 }
 
 footer {
@@ -215,6 +230,7 @@ input[type=submit]:hover {
     padding-left: 35px; 
   
   }
+
 }
 
 
